<resources>
    <string name="app_name">PrivacyShield</string>
    <string name="status_active">Active</string>
    <string name="status_inactive">Inactive</string>
    <string name="enable_description">Toggle the privacy overlay. Tilt your phone to hide the screen from prying eyes.</string>
    <string name="tilt_sensitivity">Tilt Sensitivity</string>
    <string name="tilt_description">Angle (in degrees) at which the screen becomes fully dark.</string>
    <string name="overlay_opacity">Overlay Darkness</string>
    <string name="opacity_description">How dark the overlay becomes when tilted.</string>
</resources>